assign manager to employee
